--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: date -d 'today' "+%d-%m-%Y" 
       - run:
           name: print number 1 to 100
-          command: se 1 100
+          command: seq 1 100
       - run:
           bash ./test.sh
       - run:
